# photofinish

./: .gitignore  CMakeLists.txt  Doxyfile  Image.hh  Image_png.hh  Makefile  README.mediawiki  index.html  params.json  photofinish.cc  plan  process_scans.cc  workqueue
docs/examples/: destinations.yml
doxygen/html/: _benchmark_8cc.html  _benchmark_8cc.js  _benchmark_8cc_source.html  _benchmark_8hh.html  _benchmark_8hh.js  _benchmark_8hh_source.html  _c_m_s_8cc.html  _c_m_s_8cc.js  _c_m_s_8cc_source.html  _c_m_s_8hh.html  _c_m_s_8hh.js  _c_m_s_8hh_source.html  _crop_solution_8cc.html  _crop_solution_8cc.js  _crop_solution_8cc_source.html  _crop_solution_8hh.html  _crop_solution_8hh.js  _crop_solution_8hh_source.html  _definable_8hh.html  _definable_8hh_source.html  _destination_8cc.html  _destination_8cc.js  _destination_8cc_source.html  _destination_8hh.html  _destination_8hh_source.html  _destination__items_8cc.html  _destination__items_8cc.js  _destination__items_8cc_source.html  _destination__items_8hh.html  _destination__items_8hh.js  _destination__items_8hh_source.html  _ditherer_8cc.html  _ditherer_8cc.js  _ditherer_8cc_source.html  _ditherer_8hh.html  _ditherer_8hh_source.html  _exception_8hh.html  _exception_8hh.js  _exception_8hh_source.html  _frame_8cc.html  (+495 more)
doxygen/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  (+161 more)
doxygen/latex/: _benchmark_8cc.tex  _benchmark_8hh.tex  _c_m_s_8cc.tex  _c_m_s_8hh.tex  _crop_solution_8cc.tex  _crop_solution_8hh.tex  _definable_8hh.tex  _destination_8cc.tex  _destination_8hh.tex  _destination__items_8cc.tex  _destination__items_8hh.tex  _ditherer_8cc.tex  _ditherer_8hh.tex  _exception_8hh.tex  _frame_8cc.tex  _frame_8hh.tex  _image_8cc.tex  _image_8hh.tex  _image_file_8cc.tex  _image_file_8hh.tex  _j_p2_8hh.tex  _j_p2__callbacks_8cc.tex  _j_p2reader_8cc.tex  _j_p2writer_8cc.tex  _j_p_e_g_8hh.tex  _j_p_e_g__iostream_8cc.tex  _j_p_e_g__profiles_8cc.tex  _j_p_e_g__scans_8cc.tex  _j_p_e_greader_8cc.tex  _j_p_e_gwriter_8cc.tex  _j_x_r_8hh.tex  _j_x_r__formats_8cc.tex  _j_x_rreader_8cc.tex  _j_x_rwriter_8cc.tex  _kernel1_dvar_8cc.tex  _kernel1_dvar_8hh.tex  _kernel2_d_8cc.tex  _kernel2_d_8hh.tex  _l_c_m_s2_error_handler_8cc.tex  _p_n_greader_8cc.tex  (+110 more)
doxygen/man/man3/: Benchmark.cc.3  Benchmark.hh.3  CMS.3  CMS.cc.3  CMS.hh.3  CMS_Format.3  CMS_Profile.3  CMS_Transform.3  CropSolution.cc.3  CropSolution.hh.3  Definable.hh.3  Destination.cc.3  Destination.hh.3  Destination_items.cc.3  Destination_items.hh.3  Ditherer.cc.3  Ditherer.hh.3  Exception.hh.3  Frame.cc.3  Frame.hh.3  Image.cc.3  Image.hh.3  ImageFile.cc.3  ImageFile.hh.3  JP2.hh.3  JP2_callbacks.cc.3  JP2reader.cc.3  JP2writer.cc.3  JPEG.hh.3  JPEG_iostream.cc.3  JPEG_profiles.cc.3  JPEG_scans.cc.3  JPEGreader.cc.3  JPEGwriter.cc.3  JXR.hh.3  JXR_formats.cc.3  JXRreader.cc.3  JXRwriter.cc.3  Kernel1Dvar.cc.3  Kernel1Dvar.hh.3  (+73 more)
include/: Benchmark.hh  CMS.hh  CMS_containers.hh  CMStransformer.hh  CropSolution.hh  Definable.hh  Destination.hh  Destination_items.hh  Ditherer.hh  Exception.hh  Filter.hh  Frame.hh  Function1D.hh  Function2D.hh  Image.hh  ImageFile.hh  Image_png.hh  JPEGfile_iostream.hh  Kernel1Dvar.hh  Kernel2D.hh  Resampler.hh  Rescaler.hh  Sharpen.hh  Tags.hh  TransformQueue.hh  WebP_ostream.hh  Worker.hh  mmap.hh  sample.h  vec.hh
lib/: Benchmark.cc  CMS.cc  CMStransformer.cc  CropSolution.cc  Destination.cc  Destination_items.cc  Ditherer.cc  Filter.cc  Frame.cc  Image.cc  ImageFile.cc  JP2file.cc  JPEGFile.cc  JPEGFile_scans.cc  JPEGfile.cc  JPEGfile_iostream.cc  JPEGfile_profiles.cc  Kernel1Dvar.cc  Kernel2D.cc  LCMS2ErrorHandler.cc  PNGFile.cc  PNGfile.cc  Resampler.cc  Rescaler.cc  Sharpen.cc  TIFFfile.cc  Tags.cc  Tags_EXIF_subst.cc  Tags_IPTC_subst.cc  Tags_XMP_subst.cc  TransformQueue.cc  Worker.cc  mmap.cc
lib/formats/: FLIFreader.cc  FLIFwriter.cc  HEIFreader.cc  HEIFwriter.cc  JP2.hh  JP2_callbacks.cc  JP2file.cc  JP2reader.cc  JP2writer.cc  JPEG.hh  JPEG_iostream.cc  JPEG_metadata.cc  JPEG_profiles.cc  JPEG_scans.cc  JPEGfile.cc  JPEGfile_iostream.cc  JPEGfile_profiles.cc  JPEGreader.cc  JPEGwriter.cc  JXL.cc  JXL.hh  JXLreader.cc  JXLwriter.cc  JXR.hh  JXR_formats.cc  JXRreader.cc  JXRwriter.cc  PNGfile.cc  PNGreader.cc  PNGreader_cb.cc  PNGreader_cb.hh  PNGwriter.cc  SOLfile.cc  SOLwriter.cc  TIFFfile.cc  TIFFreader.cc  TIFFwriter.cc  WebP_ostream.cc  WebP_ostream.hh  WebPfile.cc  (+2 more)
